; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/extr_fastcgi.c_append_pair.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/extr_fastcgi.c_append_pair.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32*, i8*, i64, i8*, i64)* @append_pair to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @append_pair(i32* %0, i32* %1, i8* %2, i64 %3, i8* %4, i64 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca [8 x i8], align 1
  %14 = alloca i8*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i8* %4, i8** %11, align 8
  store i64 %5, i64* %12, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = getelementptr inbounds [8 x i8], [8 x i8]* %13, i64 0, i64 0
  %18 = getelementptr inbounds [8 x i8], [8 x i8]* %13, i64 0, i64 0
  %19 = load i64, i64* %10, align 8
  %20 = call i8* @encode_length_of_pair(i8* %18, i64 %19)
  %21 = load i64, i64* %12, align 8
  %22 = call i8* @encode_length_of_pair(i8* %20, i64 %21)
  %23 = getelementptr inbounds [8 x i8], [8 x i8]* %13, i64 0, i64 0
  %24 = ptrtoint i8* %22 to i64
  %25 = ptrtoint i8* %23 to i64
  %26 = sub i64 %24, %25
  %27 = call i8* @append(i32* %15, i32* %16, i8* %17, i64 %26)
  %28 = load i32*, i32** %7, align 8
  %29 = load i32*, i32** %8, align 8
  %30 = load i8*, i8** %9, align 8
  %31 = load i64, i64* %10, align 8
  %32 = call i8* @append(i32* %28, i32* %29, i8* %30, i64 %31)
  store i8* %32, i8** %14, align 8
  %33 = load i64, i64* %12, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %6
  %36 = load i32*, i32** %7, align 8
  %37 = load i32*, i32** %8, align 8
  %38 = load i8*, i8** %11, align 8
  %39 = load i64, i64* %12, align 8
  %40 = call i8* @append(i32* %36, i32* %37, i8* %38, i64 %39)
  br label %41

41:                                               ; preds = %35, %6
  %42 = load i8*, i8** %14, align 8
  ret i8* %42
}

declare dso_local i8* @append(i32*, i32*, i8*, i64) #1

declare dso_local i8* @encode_length_of_pair(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
